// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageSliderWidget /> should render no slider with just a single image 1`] = `
<ImageSliderWidget
  className=""
  settings={
    Object {
      "autostart": false,
      "delay": 7000,
      "images": Array [
        Object {
          "image": "http://placehold.it/350x150",
          "link": "http://example.com",
        },
      ],
      "loop": false,
      "pagination": true,
    }
  }
>
  <ImageSlider
    autoPlay={false}
    className=""
    classNames={Object {}}
    controls={false}
    disabled={false}
    indicators={true}
    initialSlide={0}
    interval={7000}
    loop={false}
    onSlideChange={null}
    slidesPerView={1}
    snapItems={true}
  >
    <Link
      className="css-63oe3q"
      href="http://example.com"
    >
      <div
        className="p-0 m-0 border-none text-align-left align-items-stretch w-100P css-63oe3q"
        onClick={[Function]}
        role="link"
      >
        <Image
          alt={null}
          animating={true}
          backgroundColor="#f2f2f2"
          className=""
          forcePlaceholder={false}
          highestResolutionLoaded={[Function]}
          onError={null}
          onLoad={null}
          ratio={null}
          resolutions={
            Array [
              Object {
                "blur": 2,
                "height": 50,
                "width": 50,
              },
              Object {
                "height": 440,
                "width": 440,
              },
            ]
          }
          src="http://placehold.it/350x150"
          transition={null}
        >
          <div
            className="position-relative b-f2f2f2 z-index-0 _before-d-block _before-content-__ _before-w-100P _before-pt-100p000P "
          />
        </Image>
      </div>
    </Link>
  </ImageSlider>
</ImageSliderWidget>
`;

exports[`<ImageSliderWidget /> should render the images unlinked if no link is set 1`] = `
<ImageSliderWidget
  className=""
  settings={
    Object {
      "autostart": false,
      "delay": 7000,
      "images": Array [
        Object {
          "image": "http://placehold.it/350x150",
          "link": null,
        },
      ],
      "loop": false,
      "pagination": true,
    }
  }
>
  <ImageSlider
    autoPlay={false}
    className=""
    classNames={Object {}}
    controls={false}
    disabled={false}
    indicators={true}
    initialSlide={0}
    interval={7000}
    loop={false}
    onSlideChange={null}
    slidesPerView={1}
    snapItems={true}
  >
    <Image
      alt={null}
      animating={true}
      backgroundColor="#f2f2f2"
      className=""
      forcePlaceholder={false}
      highestResolutionLoaded={[Function]}
      onError={null}
      onLoad={null}
      ratio={null}
      resolutions={
        Array [
          Object {
            "blur": 2,
            "height": 50,
            "width": 50,
          },
          Object {
            "height": 440,
            "width": 440,
          },
        ]
      }
      src="http://placehold.it/350x150"
      transition={null}
    >
      <div
        className="position-relative b-f2f2f2 z-index-0 _before-d-block _before-content-__ _before-w-100P _before-pt-100p000P "
      />
    </Image>
  </ImageSlider>
</ImageSliderWidget>
`;
